Add unit tests to key_phrase_tokenizer
Signed-off-by: Mike Rombout <mike.rombout@elastisys.com>

--- a/tests/licensedcode/data/tokenize/htmlish.html
+++ b/tests/licensedcode/data/tokenize/htmlish.html
@@ -93,7 +93,7 @@
 	</div>
 <div class="main-cont">
 	<div class="main-text-cont">
-		<h1>Third party services</h1>
+		<h1>{{Third party services}}</h1>
 		<p> 
 			Of course we are all for responsible disclosure, which you might have seen if you have read our blog. So here we have listed all the third party services we use in different ways in alphabetical order and an added a short comment on why or how we use them.
 		</p>
