--- a/tests/formattedcode/data/templated/sample-template.html
+++ b/tests/formattedcode/data/templated/sample-template.html
@@ -159,7 +159,7 @@
         {% for data in row.holders %}
         <tr>
           <td>{{ path }}</td>
-          <td>{{ data.value }}</td>
+          <td>{{ data.holder }}</td>
           <td>{{ data.start_line }}</td>
           <td>{{ data.end_line }}</td>
         </tr>
@@ -184,7 +184,7 @@
         {% for data in row.authors %}
         <tr>
           <td>{{ path }}</td>
-          <td>{{ data.value }}</td>
+          <td>{{ data.author }}</td>
           <td>{{ data.start_line }}</td>
           <td>{{ data.end_line }}</td>
         </tr>
