--- a/tests/licensedcode/data/license_db/license_dump/bittorrent-1.0.html
+++ b/tests/licensedcode/data/license_db/license_dump/bittorrent-1.0.html
@@ -158,7 +158,7 @@ This BitTorrent Open Source License (the &#34;License&#34;) applies to the BitTo
 well as any updates or maintenance releases of that software (&#34;BitTorrent Products&#34;) that are distributed by
 BitTorrent, Inc. (&#34;Licensor&#34;).  Any BitTorrent Product licensed pursuant to this License is a Licensed Product.
 Licensed Product, in its entirety, is protected by U.S. copyright law.  This License identifies the terms under which
-you may use, copy, distribute or modify Licensed Product.
+you may use, copy, distribute or modify Licensed Product. 
 
 Preamble
 
@@ -206,7 +206,7 @@ portions of your Derivative Works that consist of the Licensed Product, includin
 
 New versions of this License may be published from time to time.  You may choose to  continue to use the license
 terms in this version of the License or those from the new version.  However, only the Licensor has the right to
-change the License terms as they apply to the Licensed Product.
+change the License terms as they apply to the Licensed Product. 
 
 This License relies on precise definitions for certain terms.  Those terms are defined when they are first used, and
 the definitions are repeated for your convenience in a Glossary at the end of the License.
@@ -235,14 +235,14 @@ who created or contributed to the creation of, and distributed, a Modification (
 world-wide, royalty-free, non-exclusive license, subject to third party intellectual property claims, to do the
 following:
 
-1. Use, reproduce, modify, display, perform, sublicense and distribute any Modifications created by such
+   1. Use, reproduce, modify, display, perform, sublicense and distribute any Modifications created by such
 Contributor or portions thereof, in both Source Code or as an executable program, either on an unmodified basis or as
 part of Derivative Works.
 
-2. Under claims of patents now or hereafter owned or controlled by Contributor, to make, use, sell, offer for
+   2. Under claims of patents now or hereafter owned or controlled by Contributor, to make, use, sell, offer for
 sale, have made, and/or otherwise dispose of Modifications or portions thereof, but solely to the extent that any
 such claim is necessary to enable you to make, use, sell, offer for sale, have made, and/or otherwise dispose of
-Modifications or portions thereof or Derivative Works thereof.
+Modifications or portions thereof or Derivative Works thereof. 
 
 
 3.      Exclusions From License Grant.  Nothing in this License shall be deemed to grant any rights to trademarks,
@@ -254,7 +254,7 @@ Nothing in this License shall be interpreted to prohibit Licensor from licensing
 License any code that Licensor otherwise would have a right to license.
 
 
-4.      Your Obligations Regarding Distribution.
+4.      Your Obligations Regarding Distribution. 
 
 a.       Application of This License to Your Modifications.  As an express condition for your use of the Licensed
 Product, you hereby agree that any Modifications that you create or to which you contribute, and which you
@@ -275,9 +275,9 @@ months after the date it initially became available, or at least six (6) months 
 Licensed Product or Modifications has been made available.  You are responsible for ensuring that the Source Code
 version remains available even if the Electronic Distribution Mechanism is maintained by a third party.
 
-c.       Intellectual Property Matters.
+c.       Intellectual Property Matters.  
 
-i.            Third Party Claims.  If you have knowledge that a license to a third
+                                i.            Third Party Claims.  If you have knowledge that a license to a third
 party&#39;s intellectual property right is required to exercise the rights granted by this License, you must include a
 text file with the Source Code distribution titled &#34;LEGAL&#34; that describes the claim and the party making the claim in
 sufficient detail that a recipient will know whom to contact.  If you obtain such knowledge after you make any
@@ -286,11 +286,11 @@ available thereafter and shall take other steps (such as notifying appropriate m
 reasonably calculated to inform those who received the Licensed Product from you that new knowledge has been
 obtained.
 
-ii.            Contributor APIs.  If your Modifications include an application
+                               ii.            Contributor APIs.  If your Modifications include an application
 programming interface (&#34;API&#34;) and you have knowledge of patent licenses that are reasonably necessary to implement
 that API, you must also include this information in the LEGAL file.
 
-iii.            Representations.  You represent that, except as disclosed pursuant to
+                              iii.            Representations.  You represent that, except as disclosed pursuant to
 4(c)(i) above, you believe that any Modifications you distribute are your original creations and that you have
 sufficient rights to grant the rights conveyed by this License.
 
@@ -314,12 +314,12 @@ executable version, related documentation and collateral materials stating that 
 Licensed Product is available under the terms of this License, including a description of how and where you have
 fulfilled the obligations of Section 4(b), and (iii) you make it clear that any terms that differ from this License
 are offered by you alone, not by Licensor or any Contributor.  You hereby agree to indemnify the Licensor and every
-Contributor for any liability incurred by Licensor or such Contributor as a result of any terms you offer.
+Contributor for any liability incurred by Licensor or such Contributor as a result of any terms you offer. 
 
 f.       Distribution of Derivative Works.  You may create Derivative Works (e.g., combinations of some or all of the
 Licensed Product with other code) and distribute the Derivative Works as products under any other license you select,
 with the proviso that the requirements of this License are fulfilled for those portions of the Derivative Works that
-consist of the Licensed Product or any Modifications thereto.
+consist of the Licensed Product or any Modifications thereto. 
 
 
 5.      Inability to Comply Due to Statute or Regulation.  If it is impossible for you to comply with any of the
@@ -329,7 +329,7 @@ statute or regulation that prohibits you from adhering to the License, and (iii)
 code they affect. Such description must be included in the LEGAL file described in Section 4(d), and must be included
 with all distributions of the Source Code.  Except to the extent prohibited by statute or regulation, such
 description must be sufficiently detailed for a recipient of ordinary skill at computer programming to be able to
-understand it.
+understand it. 
 
 
 6.      Application of This License.  This License applies to code to which Licensor or Contributor has attached the
@@ -338,7 +338,7 @@ Notice in Exhibit A, which is incorporated herein by this reference.
 
 7.      Versions of This License.
 
-a.       New Versions.  Licensor may publish from time to time revised and/or new versions of the License.
+a.       New Versions.  Licensor may publish from time to time revised and/or new versions of the License. 
 
 b.       Effect of New Versions.  Once Licensed Product has been published under a particular version of the License,
 you may always continue to use it under the terms of that version.  You may also choose to use such Licensed Product
@@ -361,7 +361,7 @@ DISCLAIMER OF WARRANTY CONSTITUTES AN ESSENTIAL PART OF THIS LICENSE. NO USE OF 
 HEREUNDER EXCEPT UNDER THIS DISCLAIMER.
 
 
-9.      Termination.
+9.      Termination. 
 
 a.       Automatic Termination Upon Breach.  This license and the rights granted hereunder will terminate
 automatically if you fail to comply with the terms herein and fail to cure such breach within thirty (30) days of
@@ -400,7 +400,7 @@ MALFUNCTION, OR ANY AND ALL OTHER COMMERCIAL DAMAGES OR LOSSES, EVEN IF SUCH PAR
 POSSIBILITY OF SUCH DAMAGES.  THIS LIMITATION OF LIABILITY SHALL NOT APPLY TO LIABILITY FOR DEATH OR PERSONAL INJURY
 RESULTING FROM SUCH PARTYS NEGLIGENCE TO THE EXTENT APPLICABLE LAW PROHIBITS SUCH LIMITATION.  SOME JURISDICTIONS DO
 NOT ALLOW THE EXCLUSION OR LIMITATION OF INCIDENTAL OR CONSEQUENTIAL DAMAGES, SO THIS EXCLUSION AND LIMITATION MAY
-NOT APPLY TO YOU.
+NOT APPLY TO YOU. 
 
 
 11.  Responsibility for Claims.  As between Licensor and Contributors, each party is responsible for claims and
@@ -439,7 +439,7 @@ ownership of fifty percent (50%) or more of the outstanding shares, or (iii) ben
 
 15.  Glossary.  All defined terms in this License that are used in more than one Section of this License are repeated
 here, in alphabetical order, for the convenience of the reader.  The Section of this License in which each defined
-term is first used is shown in parentheses.
+term is first used is shown in parentheses. 
 
 Contributor:  Each person or entity who created or contributed to the creation of, and distributed, a Modification.
 (See Section 2)
@@ -493,7 +493,7 @@ This BitTorrent Open Source License (the &#34;License&#34;) applies to the BitTo
 well as any updates or maintenance releases of that software (&#34;BitTorrent Products&#34;) that are distributed by
 BitTorrent, Inc. (&#34;Licensor&#34;).  Any BitTorrent Product licensed pursuant to this License is a Licensed Product.
 Licensed Product, in its entirety, is protected by U.S. copyright law.  This License identifies the terms under which
-you may use, copy, distribute or modify Licensed Product.
+you may use, copy, distribute or modify Licensed Product. 
 
 Preamble
 
@@ -541,7 +541,7 @@ portions of your Derivative Works that consist of the Licensed Product, includin
 
 New versions of this License may be published from time to time.  You may choose to  continue to use the license
 terms in this version of the License or those from the new version.  However, only the Licensor has the right to
-change the License terms as they apply to the Licensed Product.
+change the License terms as they apply to the Licensed Product. 
 
 This License relies on precise definitions for certain terms.  Those terms are defined when they are first used, and
 the definitions are repeated for your convenience in a Glossary at the end of the License.
@@ -570,14 +570,14 @@ who created or contributed to the creation of, and distributed, a Modification (
 world-wide, royalty-free, non-exclusive license, subject to third party intellectual property claims, to do the
 following:
 
-1. Use, reproduce, modify, display, perform, sublicense and distribute any Modifications created by such
+   1. Use, reproduce, modify, display, perform, sublicense and distribute any Modifications created by such
 Contributor or portions thereof, in both Source Code or as an executable program, either on an unmodified basis or as
 part of Derivative Works.
 
-2. Under claims of patents now or hereafter owned or controlled by Contributor, to make, use, sell, offer for
+   2. Under claims of patents now or hereafter owned or controlled by Contributor, to make, use, sell, offer for
 sale, have made, and/or otherwise dispose of Modifications or portions thereof, but solely to the extent that any
 such claim is necessary to enable you to make, use, sell, offer for sale, have made, and/or otherwise dispose of
-Modifications or portions thereof or Derivative Works thereof.
+Modifications or portions thereof or Derivative Works thereof. 
 
 
 3.      Exclusions From License Grant.  Nothing in this License shall be deemed to grant any rights to trademarks,
@@ -589,7 +589,7 @@ Nothing in this License shall be interpreted to prohibit Licensor from licensing
 License any code that Licensor otherwise would have a right to license.
 
 
-4.      Your Obligations Regarding Distribution.
+4.      Your Obligations Regarding Distribution. 
 
 a.       Application of This License to Your Modifications.  As an express condition for your use of the Licensed
 Product, you hereby agree that any Modifications that you create or to which you contribute, and which you
@@ -610,9 +610,9 @@ months after the date it initially became available, or at least six (6) months 
 Licensed Product or Modifications has been made available.  You are responsible for ensuring that the Source Code
 version remains available even if the Electronic Distribution Mechanism is maintained by a third party.
 
-c.       Intellectual Property Matters.
+c.       Intellectual Property Matters.  
 
-i.            Third Party Claims.  If you have knowledge that a license to a third
+                                i.            Third Party Claims.  If you have knowledge that a license to a third
 party&#39;s intellectual property right is required to exercise the rights granted by this License, you must include a
 text file with the Source Code distribution titled &#34;LEGAL&#34; that describes the claim and the party making the claim in
 sufficient detail that a recipient will know whom to contact.  If you obtain such knowledge after you make any
@@ -621,11 +621,11 @@ available thereafter and shall take other steps (such as notifying appropriate m
 reasonably calculated to inform those who received the Licensed Product from you that new knowledge has been
 obtained.
 
-ii.            Contributor APIs.  If your Modifications include an application
+                               ii.            Contributor APIs.  If your Modifications include an application
 programming interface (&#34;API&#34;) and you have knowledge of patent licenses that are reasonably necessary to implement
 that API, you must also include this information in the LEGAL file.
 
-iii.            Representations.  You represent that, except as disclosed pursuant to
+                              iii.            Representations.  You represent that, except as disclosed pursuant to
 4(c)(i) above, you believe that any Modifications you distribute are your original creations and that you have
 sufficient rights to grant the rights conveyed by this License.
 
@@ -649,12 +649,12 @@ executable version, related documentation and collateral materials stating that 
 Licensed Product is available under the terms of this License, including a description of how and where you have
 fulfilled the obligations of Section 4(b), and (iii) you make it clear that any terms that differ from this License
 are offered by you alone, not by Licensor or any Contributor.  You hereby agree to indemnify the Licensor and every
-Contributor for any liability incurred by Licensor or such Contributor as a result of any terms you offer.
+Contributor for any liability incurred by Licensor or such Contributor as a result of any terms you offer. 
 
 f.       Distribution of Derivative Works.  You may create Derivative Works (e.g., combinations of some or all of the
 Licensed Product with other code) and distribute the Derivative Works as products under any other license you select,
 with the proviso that the requirements of this License are fulfilled for those portions of the Derivative Works that
-consist of the Licensed Product or any Modifications thereto.
+consist of the Licensed Product or any Modifications thereto. 
 
 
 5.      Inability to Comply Due to Statute or Regulation.  If it is impossible for you to comply with any of the
@@ -664,7 +664,7 @@ statute or regulation that prohibits you from adhering to the License, and (iii)
 code they affect. Such description must be included in the LEGAL file described in Section 4(d), and must be included
 with all distributions of the Source Code.  Except to the extent prohibited by statute or regulation, such
 description must be sufficiently detailed for a recipient of ordinary skill at computer programming to be able to
-understand it.
+understand it. 
 
 
 6.      Application of This License.  This License applies to code to which Licensor or Contributor has attached the
@@ -673,7 +673,7 @@ Notice in Exhibit A, which is incorporated herein by this reference.
 
 7.      Versions of This License.
 
-a.       New Versions.  Licensor may publish from time to time revised and/or new versions of the License.
+a.       New Versions.  Licensor may publish from time to time revised and/or new versions of the License. 
 
 b.       Effect of New Versions.  Once Licensed Product has been published under a particular version of the License,
 you may always continue to use it under the terms of that version.  You may also choose to use such Licensed Product
@@ -696,7 +696,7 @@ DISCLAIMER OF WARRANTY CONSTITUTES AN ESSENTIAL PART OF THIS LICENSE. NO USE OF 
 HEREUNDER EXCEPT UNDER THIS DISCLAIMER.
 
 
-9.      Termination.
+9.      Termination. 
 
 a.       Automatic Termination Upon Breach.  This license and the rights granted hereunder will terminate
 automatically if you fail to comply with the terms herein and fail to cure such breach within thirty (30) days of
@@ -735,7 +735,7 @@ MALFUNCTION, OR ANY AND ALL OTHER COMMERCIAL DAMAGES OR LOSSES, EVEN IF SUCH PAR
 POSSIBILITY OF SUCH DAMAGES.  THIS LIMITATION OF LIABILITY SHALL NOT APPLY TO LIABILITY FOR DEATH OR PERSONAL INJURY
 RESULTING FROM SUCH PARTYS NEGLIGENCE TO THE EXTENT APPLICABLE LAW PROHIBITS SUCH LIMITATION.  SOME JURISDICTIONS DO
 NOT ALLOW THE EXCLUSION OR LIMITATION OF INCIDENTAL OR CONSEQUENTIAL DAMAGES, SO THIS EXCLUSION AND LIMITATION MAY
-NOT APPLY TO YOU.
+NOT APPLY TO YOU. 
 
 
 11.  Responsibility for Claims.  As between Licensor and Contributors, each party is responsible for claims and
@@ -774,7 +774,7 @@ ownership of fifty percent (50%) or more of the outstanding shares, or (iii) ben
 
 15.  Glossary.  All defined terms in this License that are used in more than one Section of this License are repeated
 here, in alphabetical order, for the convenience of the reader.  The Section of this License in which each defined
-term is first used is shown in parentheses.
+term is first used is shown in parentheses. 
 
 Contributor:  Each person or entity who created or contributed to the creation of, and distributed, a Modification.
 (See Section 2)
@@ -826,7 +826,7 @@ or implied.  See the License for the specific language governing rights and limi
       <a href="https://www.aboutcode.org/" target="_blank">AboutCode</a>
     </p>
     <p>Designed and built by <a href="https://www.nexb.com/" target="_blank">nexB</a>. Licensed under the <a href="cc-by-4.0.html">Creative Commons Attribution License 4.0 (CC-BY-4.0)</a>.</p>
-    <p>Generated with <a href="https://github.com/nexB/scancode-toolkit" target="_blank">ScanCode toolkit</a> 31.2.2 on Nov 06, 2022.</p>
+    <p>Generated with <a href="https://github.com/nexB/scancode-toolkit" target="_blank">ScanCode toolkit</a> 32.0.0b1 on Dec 22, 2022.</p>
   </footer>
 </div>
     
