Update expected test results
Signed-off-by: Jono Yang <jyang@nexb.com>

--- a/tests/formattedcode/data/templated/simple-expected.html
+++ b/tests/formattedcode/data/templated/simple-expected.html
@@ -124,7 +124,7 @@
               <td>bdf7c572beb4094c2059508fa73c05a4</td>
               <td></td>
               <td>text/plain</td>
-              <td>UTF-8 Unicode text, with no line terminators</td>
+              <td>Unicode text, UTF-8 text, with no line terminators</td>
               <td>C</td>
               <td>False</td>
               <td>True</td>
