--- a/tests/formattedcode/data/templated/tree/expected.html
+++ b/tests/formattedcode/data/templated/tree/expected.html
@@ -176,7 +176,7 @@
               <td>fc7f53659b7a9db8b6dff0638641778e</td>
               <td></td>
               <td>text/plain</td>
-              <td>UTF-8 Unicode text</td>
+              <td>Unicode text, UTF-8 text</td>
               <td>C</td>
               <td>False</td>
               <td>True</td>
@@ -196,7 +196,7 @@
               <td>fc7f53659b7a9db8b6dff0638641778e</td>
               <td></td>
               <td>text/plain</td>
-              <td>UTF-8 Unicode text</td>
+              <td>Unicode text, UTF-8 text</td>
               <td>C</td>
               <td>False</td>
               <td>True</td>
@@ -216,7 +216,7 @@
               <td>e999e21c9d7de4d0f943aefbb6f21b99</td>
               <td></td>
               <td>text/plain</td>
-              <td>UTF-8 Unicode text</td>
+              <td>Unicode text, UTF-8 text</td>
               <td>C</td>
               <td>False</td>
               <td>True</td>
@@ -256,7 +256,7 @@
               <td>fc7f53659b7a9db8b6dff0638641778e</td>
               <td></td>
               <td>text/plain</td>
-              <td>UTF-8 Unicode text</td>
+              <td>Unicode text, UTF-8 text</td>
               <td>C</td>
               <td>False</td>
               <td>True</td>
@@ -276,7 +276,7 @@
               <td>fc7f53659b7a9db8b6dff0638641778e</td>
               <td></td>
               <td>text/plain</td>
-              <td>UTF-8 Unicode text</td>
+              <td>Unicode text, UTF-8 text</td>
               <td>C</td>
               <td>False</td>
               <td>True</td>
@@ -296,7 +296,7 @@
               <td>290627a1387288ef77ae7e07946f3ecf</td>
               <td></td>
               <td>text/plain</td>
-              <td>UTF-8 Unicode text</td>
+              <td>Unicode text, UTF-8 text</td>
               <td>C</td>
               <td>False</td>
               <td>True</td>
@@ -316,7 +316,7 @@
               <td>88e46475db9b1a68f415f6a3544eeb16</td>
               <td></td>
               <td>text/plain</td>
-              <td>UTF-8 Unicode text</td>
+              <td>Unicode text, UTF-8 text</td>
               <td>C</td>
               <td>False</td>
               <td>True</td>
